--- a/android/app/src/main/res/layout/setup_fragment.xml
+++ b/android/app/src/main/res/layout/setup_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".SetupFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/setup_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -26,7 +26,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/setup_title"
         android:importantForAutofill="no" />
 
     <EditText
@@ -43,7 +43,7 @@
         android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/ok_button"
+        android:id="@+id/setup_ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
