--- a/android/app/src/main/res/layout/splash_fragment.xml
+++ b/android/app/src/main/res/layout/splash_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".SplashFragment">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/splash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
