--- a/android/app/src/main/res/layout/todo_fragment.xml
+++ b/android/app/src/main/res/layout/todo_fragment.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/clear_list"
+            android:text="@string/clean_list"
             android:textSize="12sp" />
 
 
