--- a/android/app/src/main/res/layout/setup_fragment.xml
+++ b/android/app/src/main/res/layout/setup_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetupFragment">
+    tools:context=".setup.SetupFragment">
 
     <TextView
         android:id="@+id/setup_title"
