--- a/android/app/src/main/res/layout/indexed_todo_item.xml
+++ b/android/app/src/main/res/layout/indexed_todo_item.xml
@@ -2,12 +2,14 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="4dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/description"
@@ -41,5 +43,4 @@
             android:text="@string/down" />
 
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
