Add margin and padding to recycler view items

--- a/android/app/src/main/res/layout/order_fragment.xml
+++ b/android/app/src/main/res/layout/order_fragment.xml
@@ -11,7 +11,8 @@
         android:id="@+id/order_recycler"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
 
     <Button
         android:id="@+id/order_ok_button"
