--- a/android/app/src/main/res/layout/todo_fragment.xml
+++ b/android/app/src/main/res/layout/todo_fragment.xml
@@ -11,7 +11,8 @@
         android:id="@+id/todo_recycler"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
